[package]
name = "adventure-time"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"
license = "MIT"
keywords = ["adventure", "education"]
description = "A CLI for completing various adventures: rust-adventure, shell-adventure, etc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
clap = "3.0.0-beta.2"
serde_yaml = "0.8.14"
yaml-rust = "0.4.4"
lazy_static = "1.4.0"
directories = "3.0.1"
tokio = { version = "0.3.5", features = ["full"] }
reqwest = "0.10.9"

[lib]
name = "adventure_time"
path = "src/lib.rs"
